[package]
name = "hunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.45"
libc = "^0.2.107"
nix = "^0.23.0"
rayon = "1.5.1"
structopt = "^0.3.25"
unicode-normalization = "0.1.19"
zstd = "0.9.0"
fst = "^0.4.7"

# [dev-dependencies]
fuzzy-matcher = "0.3.7"
